fixed description in pom files

--- a/pom.conf
+++ b/pom.conf
@@ -3,7 +3,7 @@ NAME="ChunkPerfect"
 ARTIFACT="chunkperfect"
 GROUP="com.poixson"
 URL="https://poixson.com"
-DESC="Generate and keep chunks loaded"
+DESC="Generate chunks in a world and keep chunks loaded"
 
 SHADE=$YES
 
